ingress-v2/app-01.yml
kind: Pod
apiVersion: v1
metadata:
  name: app-01
  labels:
    app: app-01
spec:
  containers:
    - name: app-01
      image: kurtay/test-app:latest
      ports:
      - containerPort: 5000
---

kind: Service
apiVersion: v1
metadata:
  name: app-01
spec:
  type: NodePort
  selector:
    app: app-01
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
