ingress-v2/ingress-host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: test.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-01
              port:
                number: 5000
  - host: prod.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-02
              port:
                number: 5000
