ingress-v2/ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: example.com
    http:
      paths:
        - path: /test1
          pathType: Prefix
          backend:
            service:
              name: app-01
              port: 
                number: 5000
        - path: /test2
          pathType: Prefix
          backend:
            service:
              name: app-02
              port:
                number: 5000
