ingress-v2/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.example.com
    - prod.example.com
    secretName: app-ssl
  defaultBackend:
    service:
      name: app-01
      port:
        number: 80
  rules:
  - host: test.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-01
              port:
                number: 5000
  - host: prod.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-02
              port:
                number: 5000
